--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    runs-on: macos-14
+    runs-on: self-hosted
     steps:
       - uses: maxim-lobanov/setup-xcode@v1
         with:
