--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       - name: iOS build and test
         run: |
           set -o pipefail
-          xcodebuild test -project PokemonGuider.xcodeproj -testPlan PokemonGuider -enableCodeCoverage YES -resultBundlePath './TestResult.xcresult' -destination 'platform=iOS Simulator,name=iPhone 15 Pro,OS=17.2' build test | xcpretty
+          xcodebuild test -project PokemonGuider.xcodeproj -testPlan PokemonGuider -scheme PokemonGuider -enableCodeCoverage YES -resultBundlePath './TestResult.xcresult' -destination 'platform=iOS Simulator,name=iPhone 15 Pro,OS=17.2' build test | xcpretty
       - name: Codecov
         uses: codecov/codecov-action@v3.1.1
         with:
